tests/NormalTests/paczka1/small_fuzzy/94734712.err
Error in line 2: S701 S511 19,0
Error in line 10: bOPcPKz3 S126 53,1
Error in line 6: FAFI A499 89,4
